Updated Banner's and default Price

--- a/Front-End/consoles.html
+++ b/Front-End/consoles.html
@@ -12,25 +12,23 @@
 </style>
 <body> 
 
-    <div id="banner">
-        <div id="header">
-            <h1>Panther's Games</h1> 
-            <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
-        </div>
-        <div id="userInfo">
-            <label for="phoneNum">Enter Phone Number</label>
-            <input type="text" id="phoneNum" name="phoneNum" placeholder="123-123-1234" maxlength="12">
-            <img src="img/phone.png" alt="Phone" style="width:50px; margin:0;"><br><br>
-            <a href = "cart.html">View Cart</a>
-        </div>
+  <div id="banner">
+    <div id="header">
+        <h1>&nbsp;Panther's Games</h1> 
+        <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
     </div>
+    <div id="userInfo">
+        <br><br><br>
+        <a href = "cart.html">View Cart</a>&nbsp;&nbsp;&nbsp;
+    </div>
+</div>
 
     <div id="title">Consoles</div>
 
     <div id="samples">
       <div class="expo">
         <h2>Playstation 5</h2>
-        <h3 id="price-4">$60.00</h3>
+        <h3 id="price-4">PRICE</h3>
         <div class="expoImg">
           <div><img src="img/minus.png" alt="Minus" class="minus" data-id="4" style="cursor:pointer" /></div>
           <div><img src="img/consoles/ps5.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -40,7 +38,7 @@
   
       <div class="expo">
         <h2>Playstation 5 Slim</h2>
-        <h3 id="price-26">$60.00</h3>
+        <h3 id="price-26">PRICE</h3>
         <div class="expoImg">
           <div><img src="img/minus.png" alt="Minus" class="minus" data-id="26" style="cursor:pointer" /></div>
           <div><img src="img/consoles/ps5-slim.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -50,7 +48,7 @@
   
       <div class="expo">
         <h2>Xbox Series X</h2>
-        <h3 id="price-3">$60.00</h3>
+        <h3 id="price-3">PRICE</h3>
         <div class="expoImg">
           <div><img src="img/minus.png" alt="Minus" class="minus" data-id="3" style="cursor:pointer" /></div>
           <div><img src="img/consoles/xbox-series-x.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -60,7 +58,7 @@
   
       <div class="expo">
         <h2>Xbox Series S</h2>
-        <h3 id="price-27">$60.00</h3>
+        <h3 id="price-27">PRICE</h3>
         <div class="expoImg">
           <div><img src="img/minus.png" alt="Minus" class="minus" data-id="27" style="cursor:pointer" /></div>
           <div><img src="img/consoles/xbox-series-s.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -70,7 +68,7 @@
   
       <div class="expo">
         <h2>Nintendo Switch</h2>
-        <h3 id="price-24">$60.00</h3>
+        <h3 id="price-24">PRICE</h3>
         <div class="expoImg">
           <div><img src="img/minus.png" alt="Minus" class="minus" data-id="24" style="cursor:pointer" /></div>
           <div><img src="img/consoles/switch.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -80,7 +78,7 @@
   
       <div class="expo">
         <h2>Nintendo Switch OLED</h2>
-        <h3 id="price-2">$60.00</h3>
+        <h3 id="price-2">PRICE</h3>
         <div class="expoImg">
           <div><img src="img/minus.png" alt="Minus" class="minus" data-id="2" style="cursor:pointer" /></div>
           <div><img src="img/consoles/switch-oled.png" alt="Game" style="max-width:100%; height:auto" /></div>
