--- a/Front-End/accessories.html
+++ b/Front-End/accessories.html
@@ -14,17 +14,15 @@
 
     <!-- banner and top bar for phone + cart -->
     <div id="banner">
-        <div id="header">
-            <h1>Panther's Games</h1> 
-            <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
-        </div>
-        <div id="userInfo">
-            <label for="phoneNum">Enter Phone Number</label>
-            <input type="text" id="phoneNum" name="phoneNum" placeholder="123-123-1234" maxlength="12">
-            <img src="img/phone.png" alt="Phone" style="width:50px; margin:0;"><br><br>
-            <a href = "cart.html">View Cart</a>
-        </div>
-    </div>
+      <div id="header">
+          <h1>&nbsp;Panther's Games</h1> 
+          <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
+      </div>
+      <div id="userInfo">
+          <br><br><br>
+          <a href = "cart.html">View Cart</a>&nbsp;&nbsp;&nbsp;
+      </div>
+  </div>
 
     <div id="title">Accessories</div>
 
@@ -34,7 +32,7 @@
         <!-- each controller has minus, image, and plus to update cart -->
         <div class="expo">
             <h2>White Controller</h2>
-            <h3 id="price-11">$60.00</h3>
+            <h3 id="price-11">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" class="minus" data-id="11" style="cursor:pointer" /></div>
               <div><img src="img/accessories/playstation-white.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -44,7 +42,7 @@
         <!-- other playstation controllers -->
         <div class="expo">
             <h2>Blue Controller</h2>
-            <h3 id="price-12">$60.00</h3>
+            <h3 id="price-12">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" class="minus" data-id="12" style="cursor:pointer" /></div>
               <div><img src="img/accessories/playstation-blue.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -53,7 +51,7 @@
         </div>
         <div class="expo">
             <h2>Camo Controller</h2>
-            <h3 id="price-14">$60.00</h3>
+            <h3 id="price-14">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" class="minus" data-id="14" style="cursor:pointer" /></div>
               <div><img src="img/accessories/playstation-camo.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -62,7 +60,7 @@
         </div>
         <div class="expo">
             <h2>Pink Controller</h2>
-            <h3 id="price-21">$60.00</h3>
+            <h3 id="price-21">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" class="minus" data-id="21" style="cursor:pointer" /></div>
               <div><img src="img/accessories/playstation-pink.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -77,7 +75,7 @@
         <!-- same structure as above -->
         <div class="expo">
             <h2>Black Controller</h2>
-            <h3 id="price-22">$60.00</h3>
+            <h3 id="price-22">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" class="minus" data-id="22" style="cursor:pointer" /></div>
               <div><img src="img/accessories/xbox-black.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -86,7 +84,7 @@
         </div>
         <div class="expo">
             <h2>Blue Controller</h2>
-            <h3 id="price-23">$60.00</h3>
+            <h3 id="price-23">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" class="minus" data-id="23" style="cursor:pointer" /></div>
               <div><img src="img/accessories/xbox-blue.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -95,7 +93,7 @@
         </div>
         <div class="expo">
             <h2>Green Controller</h2>
-            <h3 id="price-13">$60.00</h3>
+            <h3 id="price-13">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" class="minus" data-id="13" style="cursor:pointer" /></div>
               <div><img src="img/accessories/xbox-green.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -104,7 +102,7 @@
         </div>
         <div class="expo">
             <h2>Red Controller</h2>
-            <h3 id="price-25">$60.00</h3>
+            <h3 id="price-25">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" class="minus" data-id="25" style="cursor:pointer" /></div>
               <div><img src="img/accessories/xbox-red.png" alt="Game" style="max-width:100%; height:auto" /></div>
