--- a/Front-End/cart.html
+++ b/Front-End/cart.html
@@ -136,7 +136,7 @@
     </div>
     <div id="userInfo">
       <label for="phoneNum">Enter Phone Number</label>
-      <input type="text" id="phoneNum" name="phoneNum" placeholder="123-123-1234" maxlength="12">
+      <input type="text" id="phoneNum" name="phoneNum" placeholder="1231231234" maxlength="10">
       <img id="phoneSubmit" src="img/phone.png" alt="Phone" style="width:50px; margin:0; cursor:pointer;"><br>
       <div id="phoneStatus"></div>
       <br><a href="main.html">Back to Main</a>
