--- a/Front-End/games.html
+++ b/Front-End/games.html
@@ -8,14 +8,12 @@
 
     <div id="banner">
         <div id="header">
-            <h1>Panther's Games</h1> 
+            <h1>&nbsp;Panther's Games</h1> 
             <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
         </div>
         <div id="userInfo">
-            <label for="phoneNum">Enter Phone Number</label>
-            <input type="text" id="phoneNum" name="phoneNum" placeholder="123-123-1234" maxlength="12">
-            <img src="img/phone.png" alt="Phone" style="width:50px; margin:0;"><br><br>
-            <a href = "cart.html">View Cart</a>
+            <br><br><br>
+            <a href = "cart.html">View Cart</a>&nbsp;&nbsp;&nbsp;
         </div>
     </div>
 
@@ -24,23 +22,17 @@
     <div id="samples">
         <div class="expo">
             <h2>Astro Bot</h2>
-            <h3 id="price-7">$60.00</h3>
+            <h3 id="price-7">PRICE</h3>
             <div class="expoImg">
-              <div>
-                <img src="img/minus.png" alt="Minus" class="minus" data-id="7" style="cursor:pointer" />
-              </div>
-              <div>
-                <img src="img/games/astro-bot.png" alt="Game" style="max-width:100%; height:auto" />
-              </div>
-              <div>
-                <img src="img/plus.png" alt="Plus" class="plus" data-id="7" style="cursor:pointer" />
-              </div>
+              <div><img src="img/minus.png" alt="Minus" class="minus" data-id="7" style="cursor:pointer" /></div>
+              <div><img src="img/games/astro-bot.png" alt="Game" style="max-width:100%; height:auto" /></div>
+              <div><img src="img/plus.png" alt="Plus" class="plus" data-id="7" style="cursor:pointer" /></div>
             </div>
         </div>
 
         <div class="expo">
             <h2>Black Ops 6</h2>
-            <h3 id="price-6">$70.00</h3>
+            <h3 id="price-6">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" alt="Minus" class="minus" data-id="6" style="cursor:pointer" /></div>
               <div><img src="img/games/bo6.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -50,7 +42,7 @@
 
         <div class="expo">
             <h2>Elden Ring</h2>
-            <h3 id="price-1">$60.00</h3>
+            <h3 id="price-1">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" alt="Minus" class="minus" data-id="1" style="cursor:pointer" /></div>
               <div><img src="img/games/elden-ring.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -60,7 +52,7 @@
 
         <div class="expo">
             <h2>Marvel's Spider Man 2</h2>
-            <h3 id="price-8">$60.00</h3>
+            <h3 id="price-8">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" alt="Minus" class="minus" data-id="8" style="cursor:pointer" /></div>
               <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -70,7 +62,7 @@
 
         <div class="expo">
             <h2>Forza Horizon 5</h2>
-            <h3 id="price-9">$60.00</h3>
+            <h3 id="price-9">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" alt="Minus" class="minus" data-id="9" style="cursor:pointer" /></div>
               <div><img src="img/games/forza.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -80,7 +72,7 @@
 
         <div class="expo">
             <h2>EA Madden 2025</h2>
-            <h3 id="price-10">$60.00</h3>
+            <h3 id="price-10">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" alt="Minus" class="minus" data-id="10" style="cursor:pointer" /></div>
               <div><img src="img/games/madden.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -90,7 +82,7 @@
 
         <div class="expo">
             <h2>Star Wars Outlaws</h2>
-            <h3 id="price-28">$60.00</h3>
+            <h3 id="price-28">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" alt="Minus" class="minus" data-id="28" style="cursor:pointer" /></div>
               <div><img src="img/games/outlaws.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -100,7 +92,7 @@
 
         <div class="expo">
             <h2>Assassins Creed Valhala</h2>
-            <h3 id="price-29">$60.00</h3>
+            <h3 id="price-29">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" alt="Minus" class="minus" data-id="29" style="cursor:pointer" /></div>
               <div><img src="img/games/valhala.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -110,7 +102,7 @@
 
         <div class="expo">
             <h2>Animal Crossing New Horizons</h2>
-            <h3 id="price-30">$60.00</h3>
+            <h3 id="price-30">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" alt="Minus" class="minus" data-id="30" style="cursor:pointer" /></div>
               <div><img src="img/games/animal-crossing.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -120,7 +112,7 @@
 
         <div class="expo">
             <h2>Mario Kart 8</h2>
-            <h3 id="price-31">$60.00</h3>
+            <h3 id="price-31">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" alt="Minus" class="minus" data-id="31" style="cursor:pointer" /></div>
               <div><img src="img/games/mariokart.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -130,7 +122,7 @@
 
         <div class="expo">
             <h2>Pokemon Legends Arceus</h2>
-            <h3 id="price-32">$60.00</h3>
+            <h3 id="price-32">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" alt="Minus" class="minus" data-id="32" style="cursor:pointer" /></div>
               <div><img src="img/games/pokemon.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -140,7 +132,7 @@
 
         <div class="expo">
             <h2>Super Smash Bro's Ultimate</h2>
-            <h3 id="price-33">$60.00</h3>
+            <h3 id="price-33">PRICE</h3>
             <div class="expoImg">
               <div><img src="img/minus.png" alt="Minus" class="minus" data-id="33" style="cursor:pointer" /></div>
               <div><img src="img/games/smash-bros.png" alt="Game" style="max-width:100%; height:auto" /></div>
