--- a/Front-End/main.html
+++ b/Front-End/main.html
@@ -6,14 +6,14 @@
 </head> 
 <body> 
     <div id="banner">
-        <div id="header"><h1>Panther's Games</h1></div>
-        <div id="userInfo">
-            <label for="phoneNum">Enter Phone Number</label>
-            <input type="text" id="phoneNum" name="phoneNum" placeholder="123-123-1234" maxlength="12">
-            <img src="img/phone.png" alt="Phone" style="width:50px; margin:0;"><br><br>
-            <a href = "cart.html">View Cart</a>
+        <div id="header">
+            <h1>&nbsp;Panther's Games</h1> 
         </div>
-    </div>
+        <div id="userInfo">
+            <br><br>
+            <a href = "cart.html">View Cart</a>&nbsp;&nbsp;&nbsp;
+        </div>
+      </div>
     <div id="samples">
         <a href = "games.html" >
         <div class="expo">
