--- a/Front-End/merchandise.html
+++ b/Front-End/merchandise.html
@@ -3,20 +3,23 @@
 <title>Panther's Games</title> 
 <link rel="stylesheet" type="text/css" media="all" href="store.css">
 <link rel="icon" type="image/x-icon" href="img/paw-print.png"> 
+<style>
+  #title{
+    left:40%;
+    right:60%;
+}
+</style>
 </head> 
 <body> 
 
-    <div id="banner">
-        <div id="header">
-            <h1>Panther's Games</h1> 
-            <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
-        </div>
-        <div id="userInfo">
-            <label for="phoneNum">Enter Phone Number</label>
-            <input type="text" id="phoneNum" name="phoneNum" placeholder="123-123-1234" maxlength="12">
-            <img src="img/phone.png" alt="Phone" style="width:50px; margin:0;"><br><br>
-            <a href = "cart.html">View Cart</a>
-        </div>
+  <div id="banner">
+    <div id="header">
+        <h1>&nbsp;Panther's Games</h1> 
+        <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
+    </div>
+    <div id="userInfo">
+        <br><br><br>
+        <a href = "cart.html">View Cart</a>&nbsp;&nbsp;&nbsp;
     </div>
   </div>
   <div id="title">Merchandise</div>
@@ -25,7 +28,7 @@
   <div id="samples">
     <div class="expo">
       <h2>Pokemon Cards</h2>
-      <h3 id="price-15">$60.00</h3>
+      <h3 id="price-15">PRICE</h3>
       <div class="expoImg">
         <div><img src="img/minus.png" alt="Minus" class="minus" data-id="15" style="cursor:pointer" /></div>
         <div><img src="img/merch/pokemon.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -35,7 +38,7 @@
 
     <div class="expo">
       <h2>Invincible Funko Pop</h2>
-      <h3 id="price-16">$60.00</h3>
+      <h3 id="price-16">PRICE</h3>
       <div class="expoImg">
         <div><img src="img/minus.png" alt="Minus" class="minus" data-id="16" style="cursor:pointer" /></div>
         <div><img src="img/merch/funkopop.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -45,7 +48,7 @@
 
     <div class="expo">
       <h2>Kirby Plush</h2>
-      <h3 id="price-17">$60.00</h3>
+      <h3 id="price-17">PRICE</h3>
       <div class="expoImg">
         <div><img src="img/minus.png" alt="Minus" class="minus" data-id="17" style="cursor:pointer" /></div>
         <div><img src="img/merch/plush.png" alt="Game" style="max-width:100%; height:auto" /></div>
@@ -55,7 +58,7 @@
 
     <div class="expo">
       <h2>Legend of Zelda Shirt</h2>
-      <h3 id="price-18">$60.00</h3>
+      <h3 id="price-18">PRICE</h3>
       <div class="expoImg">
         <div><img src="img/minus.png" alt="Minus" class="minus" data-id="18" style="cursor:pointer" /></div>
         <div><img src="img/merch/shirt.webp" alt="Game" style="max-width:100%; height:auto" /></div>
