Updated Admin page with password

--- a/Front-End/main.html
+++ b/Front-End/main.html
@@ -24,26 +24,28 @@
         <a href = "consoles.html" >
         <div class="expo">
             <h2>Consoles</h2>
-            <div><img src="img/consoles/xbox-series-s.png" alt="Game"></div>
+            <div><img src="img/consoles/xbox-series-s.png" alt="Consoles"></div>
         </div>
         </a>
         <a href = "accessories.html" >
         <div class="expo">
             <h2>Accessories</h2>
-            <div><img src="img/accessories/playstation-pink.png" alt="Game"></div>
+            <div><img src="img/accessories/playstation-pink.png" alt="Accessories"></div>
         </div>
         </a>
         <a href = "merchandise.html" >
         <div class="expo">
             <h2>Merchandise</h2>
-            <div><img src="img/merch/shirt.webp" alt="Game"></div>
+            <div><img src="img/merch/shirt.webp" alt="Merch"></div>
         </div>
         </a>
     </div>
 
+    <a href = "admin.html" >
     <div class="admin">
-        <a href = "admin.html" >Admin</a>
+        <div><span>Admin</span><img src="img/admin.png" alt="Admin"></div>
     </div>
+    </a>
 
     
 </body> 
