--- a/Front-End/admin.html
+++ b/Front-End/admin.html
@@ -9,13 +9,41 @@
         margin-top: 1%;
         margin-bottom: 0%;
     }
+
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: linear-gradient(to bottom right, rgb(210, 112, 255), rgb(0, 221, 255));
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    #overlay input {
+      padding: 10px;
+      font-size: 16px;
+      margin-top: 10px;
+    }
 </style>
 <body>
+
+  <div id="overlay">
+    <h2>Enter Password to Access the Page</h2>
+    <input type="password" id="passwordInput" placeholder="Enter password" />
+    <button onclick="checkPassword()">Submit</button>
+    <p id="errorMsg" style="color: red; display: none;">Incorrect password. Try again.</p>
+    <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
+  </div>
 
 
     <div id="banner">
         <div id="header">
-            <h1>Panther's Games</h1>
+          <h1>&nbsp;Panther's Games</h1> 
             <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
         </div>
         <div id="userInfo">
@@ -417,5 +445,21 @@
       });
     });
   };
+
+  //Checks if password is correct to enter admin page
+  function checkPassword() {
+    const input = document.getElementById('passwordInput').value;
+    const correctPassword = 'admin';
+    const errorMsg = document.getElementById('errorMsg');
+
+    //If correct, hide overlay div and block inputs
+    if (input === correctPassword) {
+      document.getElementById('overlay').style.display = 'none';
+      document.getElementById('content').style.display = 'block';
+      document.body.style.overflow = 'auto'; //re-enable scrolling
+    } else {
+      errorMsg.style.display = 'block';
+    }
+  }
 </script>
 </html> 
